; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_intra_msa.c_ff_dc_8x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_intra_msa.c_ff_dc_8x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_dc_8x8_msa(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_5__, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %16 = bitcast %struct.TYPE_5__* %12 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %16, i8 0, i64 4, i1 false)
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @LD(i32* %17)
  store i32 %18, i32* %9, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @LD(i32* %19)
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %10, align 4
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @INSERT_D2_UB(i32 %21, i32 %22, i32 %24)
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @__msa_hadd_u_h(i32 %27, i32 %29)
  store i32 %30, i32* %13, align 4
  %31 = load i32, i32* %13, align 4
  %32 = load i32, i32* %13, align 4
  %33 = call i64 @__msa_hadd_u_w(i32 %31, i32 %32)
  store i64 %33, i64* %14, align 8
  %34 = load i64, i64* %14, align 8
  %35 = load i64, i64* %14, align 8
  %36 = call i64 @__msa_hadd_u_d(i64 %34, i64 %35)
  store i64 %36, i64* %15, align 8
  %37 = load i64, i64* %15, align 8
  %38 = trunc i64 %37 to i32
  %39 = load i64, i64* %15, align 8
  %40 = trunc i64 %39 to i32
  %41 = call i64 @__msa_pckev_w(i32 %38, i32 %40)
  store i64 %41, i64* %14, align 8
  %42 = load i64, i64* %14, align 8
  %43 = load i64, i64* %14, align 8
  %44 = call i64 @__msa_hadd_u_d(i64 %42, i64 %43)
  store i64 %44, i64* %15, align 8
  %45 = load i64, i64* %15, align 8
  %46 = trunc i64 %45 to i32
  %47 = call i64 @__msa_srari_w(i32 %46, i32 4)
  store i64 %47, i64* %14, align 8
  %48 = load i64, i64* %14, align 8
  %49 = call i64 @__msa_splati_b(i64 %48, i32 0)
  store i64 %49, i64* %11, align 8
  %50 = load i64, i64* %11, align 8
  %51 = trunc i64 %50 to i32
  %52 = call i32 @__msa_copy_u_d(i32 %51, i32 0)
  store i32 %52, i32* %9, align 4
  %53 = load i32, i32* %9, align 4
  %54 = load i32, i32* %9, align 4
  %55 = load i32, i32* %9, align 4
  %56 = load i32, i32* %9, align 4
  %57 = load i32*, i32** %5, align 8
  %58 = load i32, i32* %6, align 4
  %59 = call i32 @SD4(i32 %53, i32 %54, i32 %55, i32 %56, i32* %57, i32 %58)
  %60 = load i32, i32* %6, align 4
  %61 = mul nsw i32 4, %60
  %62 = load i32*, i32** %5, align 8
  %63 = sext i32 %61 to i64
  %64 = getelementptr inbounds i32, i32* %62, i64 %63
  store i32* %64, i32** %5, align 8
  %65 = load i32, i32* %9, align 4
  %66 = load i32, i32* %9, align 4
  %67 = load i32, i32* %9, align 4
  %68 = load i32, i32* %9, align 4
  %69 = load i32*, i32** %5, align 8
  %70 = load i32, i32* %6, align 4
  %71 = call i32 @SD4(i32 %65, i32 %66, i32 %67, i32 %68, i32* %69, i32 %70)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @LD(i32*) #2

declare dso_local i32 @INSERT_D2_UB(i32, i32, i32) #2

declare dso_local i32 @__msa_hadd_u_h(i32, i32) #2

declare dso_local i64 @__msa_hadd_u_w(i32, i32) #2

declare dso_local i64 @__msa_hadd_u_d(i64, i64) #2

declare dso_local i64 @__msa_pckev_w(i32, i32) #2

declare dso_local i64 @__msa_srari_w(i32, i32) #2

declare dso_local i64 @__msa_splati_b(i64, i32) #2

declare dso_local i32 @__msa_copy_u_d(i32, i32) #2

declare dso_local i32 @SD4(i32, i32, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
